# qsvm-eeg

./: .gitignore  README.md  classical.py  main.py  mlflow.db  pyproject.toml  quantum.py  requirements.txt
configs/: default.yaml  svr_rbf.yaml  svr_rbf_411.yaml  svr_rbf_48.yaml
data/raw/: patient411_bis.csv  patient48_bis.csv
notebooks/: check_tu.ipynb  classical_48.ipynb  classical_mix_48-411.ipynb  kernel_based.ipynb  quantum_48.ipynb
notebooks/shared/: tu.ipynb
qsvm_eeg/: circuit.py  data.py  features.py
reports/logs/: experiment_log.csv
src/qsvm_eeg/: data.py  features.py  quantum_kernel.py
src/qsvm_eeg/models/: base.py  registry.py  svr_qkernel.py  svr_rbf.py
